--- a/src/editor/entrytypes/li.config.tpl.html
+++ b/src/editor/entrytypes/li.config.tpl.html
@@ -7,7 +7,13 @@
 <div class="form-group row">
   <label class="col-md-2 control-label" for="">Link</label>  
   <div class="col-md-8">
-    <input ng-model="state.editItem.link" type="text" placeholder="Classes" class="form-control input-md" />
+    <input ng-model="state.editItem.link" type="text" placeholder="Link" class="form-control input-md" />
+  </div>
+</div>
+<div class="form-group row">
+  <label class="col-md-2 control-label" for="">Classes</label>  
+  <div class="col-md-8">
+    <input ng-model="state.editItem.classes" type="text" placeholder="Classes" class="form-control input-md" />
   </div>
 </div>
 <div class="row">
